src/objects/Note__c.object
<CustomObject>
    <description>Notes section for the work order</description>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <description>Date and time the entry was made in the host stystem</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Note_Author__c</fullName>
        <description>Name of person making note in host stystem</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Note Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Note to be captured from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>NotesWO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>